--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ APP_URL = http://localhost:3000
 APP_ENV = development
 
 DATABASE_URL = mongodb://127.0.0.1:27017/circlegeo-test
+
+API_KEY = s3cr3t
