--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "seed": "node databases/seed.js"
+    "seed": "node databases/seeder.js"
   },
   "author": "",
   "license": "ISC",
